<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".MainActivity">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_background"
        android:layout_margin="@dimen/marginLarge"
        android:orientation="horizontal">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="@dimen/pictureSize"
            android:layout_height="@dimen/pictureSize"
            android:layout_margin="@dimen/marginMedium"
            android:src="@drawable/profile"
            app:shapeAppearance="@style/ImageView.Corner" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="start"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginMedium"
                android:fontFamily="@font/dm_sans"
                android:text="@string/name"
                android:textColor="@color/colorTextTitle"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginNormal"
                android:fontFamily="@font/dm_sans_medium"
                android:text="@string/job"
                android:textColor="@color/colorSecondaryText"
                android:textSize="12sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/marginNormal"
                >
                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="12dp"
                    android:src="@drawable/round_location_on_24"
                    app:tint="@color/redColor"
                    android:layout_gravity="center"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:fontFamily="@font/dm_sans"
                    android:text="@string/location"
                    android:textColor="@color/colorLocationText"
                    android:textSize="13sp" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/marginNormal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dm_sans"
                    android:text="@string/reviews"
                    android:textColor="@color/colorTextTitle"
                    android:layout_gravity="center_vertical"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/marginNormal"
                    android:fontFamily="@font/dm_sans_medium"
                    android:text="@string/rate"
                    android:textColor="@color/colorTextTitle"
                    android:textSize="13sp" />

                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_marginStart="4dp"
                    android:src="@drawable/sharp_star_24"
                    app:tint="@color/yellowColor"
                    android:layout_gravity="center"
                    />


            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:orientation="vertical">

            <TextView
                android:layout_gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dm_sans"
                android:text="@string/time"
                android:textColor="@color/colorBackground"
                android:background="@drawable/red_background"
                android:layout_marginEnd="@dimen/marginNormal"
                android:layout_marginTop="@dimen/marginMedium"
                android:paddingHorizontal="8dp"
                android:paddingVertical="4dp"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:fontFamily="@font/dm_sans_medium"
                android:text="@string/nationality"
                android:textColor="@color/colorSecondaryText"
                android:textSize="12sp"
                android:layout_marginTop="@dimen/marginNormal"
                android:layout_marginEnd="@dimen/marginNormal"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:fontFamily="@font/dm_sans"
                android:text="@string/created_date"
                android:textColor="@color/colorTertiaryText"
                android:textSize="12sp"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="@dimen/marginNormal"
                />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>